syntax = "proto3";

package pb;

option go_package = "github.com/rjmp1991/pb";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse) {}
  rpc PutUser (User) returns (UserRequest) {}
  rpc UpdateUser (User) returns (UserRequest) {}
  rpc DelUser (UserRequest) returns (UserRequest) {}
  rpc ListUsers (LimitRequest) returns (stream UserResponse) {}
  rpc PutUsers (stream UserResponse) returns (stream UserRequest) {}
}

message User {
  int32 user_id = 1;
  string user_name = 2;
}

message UserRequest { int32 user_id = 1; }
message UserResponse { User user = 1; }
message LimitRequest { int32 max_results = 1;}